prevent pesky iframe embed from overflowing

--- a/css/content.css
+++ b/css/content.css
@@ -1,4 +1,7 @@
-.modular--content {}
+.modular--content {
+	max-width: 100vw;
+	overflow: hidden;
+}
 
 .content__ctn > *:last-child {
 	margin-bottom: 0;
